<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/droid_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_restaurant"
        android:textColor="@color/orangee"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <androidx.cardview.widget.CardView
        android:id="@+id/entriesCardView"
        android:layout_width="344dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/entree"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2">

        <ImageView
            android:id="@+id/entriesImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/entree"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/entrees" />

        <TextView
            android:id="@+id/entriesTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:contentDescription="@string/entree"
            android:gravity="center"
            android:text="@string/entree"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/entriesImageView"
            app:layout_constraintTop_toTopOf="@id/entriesImageView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dishesCardView"
        android:layout_width="344dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/plat"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entriesCardView">

        <ImageView
            android:id="@+id/dishesImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/plat"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/plats" />

        <TextView
            android:id="@+id/dishesTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:gravity="center"
            android:text="@string/plat"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/dishesImageView"
            app:layout_constraintTop_toTopOf="@id/dishesImageView" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dessertCardView"
        android:layout_width="344dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/dessert"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishesCardView">

        <ImageView
            android:id="@+id/dessertImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dessert"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/dessert" />

        <TextView
            android:id="@+id/dessertTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56000000"
            android:gravity="center"
            android:text="@string/dessert"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/dessertImageView"
            app:layout_constraintTop_toTopOf="@id/dessertImageView" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>